corrected alignmnet issue

--- a/Bootstrap Assignment/Assignment 3 - Bootstrap Webpage Layout/src/CSS/style.css
+++ b/Bootstrap Assignment/Assignment 3 - Bootstrap Webpage Layout/src/CSS/style.css
@@ -58,6 +58,16 @@ a {
     padding: 40px 0;
 }
 
+.style-font {
+    color: #ccc;
+    font-weight: 300;
+}
+
+.footer-anchor a {
+    color: #ccc;
+    font-weight: 300;
+}
+
 @media screen and (max-width:575px) {
     .fluid-text {
         text-align: center;
